tests/sem/pass/no_return.c
void main() {
	{
		{
			{
				if (1231)
				{
					while (12)
					{
						if (12312)
						{
							{
								
							}
						}else
						{
							{
								
							}
						}
						
						
					}
					
				}
				
			}
		}
	}
}
