tests/sem/error/condition.c
void* a;

void main() {
	if (a) {
		while ("fwdfsfs") {
		}
	}
}
